project name and vars changed to nucleus
